# gofile-rs

./: Cargo.toml  Makefile  README.md  crates.js  deny.toml  help.html  search-index.js  settings.html  src-files.js
.github/workflows/: CI.yml  Nightly.yml  RustDoc.yml
gofile/: Cargo.toml  all.html  enum.Error.html  index.html  sidebar-items.js  struct.Client.html  struct.MultipartPart.html  struct.Page.html  struct.PageChild.html  struct.UploadInfo.html
gofile-cli/: Cargo.toml  build.rs
gofile-cli/src/: commands.rs  main.rs  util.rs
gofile-cli/src/commands/: config.rs  download.rs  get.rs  info.rs  upload.rs
gofile/client/: struct.Client.html
gofile/model/page/: struct.Page.html  struct.PageChild.html
gofile/model/upload_info/: struct.UploadInfo.html
gofile/src/: client.rs  lib.rs  model.rs
gofile/src/model/: account_response.rs  page.rs  upload_info.rs
gofile_cli/: all.html  enum.Subcommand.html  fn.async_main.html  fn.get_config_dir.html  fn.main.html  index.html  sidebar-items.js  struct.Config.html  struct.Options.html
gofile_cli/commands/: index.html  sidebar-items.js
gofile_cli/commands/config/: constant.DEFAULT_CONFIG.html  enum.Subcommand.html  fn.exec.html  index.html  sidebar-items.js  struct.EditOptions.html  struct.Options.html
gofile_cli/commands/download/: fn.download_file.html  fn.exec.html  index.html  sidebar-items.js  struct.Options.html
gofile_cli/commands/info/: fn.exec.html  index.html  struct.Options.html
gofile_cli/commands/upload/: fn.exec.html  index.html  sidebar-items.js  struct.Options.html  struct.UploadProgressTracker.html
gofile_cli/config/: index.html  struct.Config.html
gofile_cli/util/: fn.parse_page_url.html  index.html  sidebar-items.js
reference/: generate-wt.2026.03.12.js
search.desc/gofile/: gofile-desc-0-.js
search.desc/gofile_cli/: gofile_cli-desc-0-.js
search.index/: 02f24c862dc4.js  07e747859c44.js  08cec63ad690.js  0a2815f8dba7.js  13943bd1f2c1.js  15e043fa1587.js  1d39ba1114b0.js  23c421f97693.js  32d42e4abf04.js  38299172417f.js  4c7276bfbbff.js  4d6ca86d9c66.js  4e25c46d995b.js  550c971cda27.js  5596f6ed361e.js  5b84539cf15e.js  5fef647a9b91.js  6684950593f3.js  6b8ead4be7cc.js  6e4115078ee2.js  7162d8811c34.js  768cd7e7e3c1.js  77424ed04f49.js  795a5412989c.js  root.js
search.index/crateNames/: 2ce4b9bb4010.js
search.index/desc/: 6e78a890dd20.js  7eaa88db5301.js  9345f49d8256.js  a6ef88070f85.js
search.index/entry/: 14c53f887535.js  213422c5618c.js  4a7dda6318cb.js  5981fec8e50b.js
search.index/function/: 4046b2603647.js  6524670bdfb5.js  954fb2515ce1.js  b411667c1feb.js
search.index/generic_inverted_index/: 5558eec95063.js  736918684ec1.js  a1d921fd306b.js  b26c7b9935e7.js
search.index/name/: 72c61713b2cd.js  87baeb80108a.js  976ca37c2d6e.js  c4ef7aadc4dd.js
search.index/normalizedName/: 295296dbc06e.js  653ce5f8dfc3.js  854aa307f7d1.js  c7ea90bdda73.js
search.index/path/: 79048146578e.js  873c2dceda6b.js  92910fdc0d7f.js  dae5a7fd2898.js
search.index/type/: 1a9ab38f489a.js  246bd3e0f1bb.js  b7ce967447e7.js  d46d58f2e66f.js
src/gofile/: client.rs.html  lib.rs.html  model.rs.html
src/gofile/model/: account_response.rs.html  page.rs.html  upload_info.rs.html
src/gofile_cli/: commands.rs.html  config.rs.html  main.rs.html  util.rs.html
src/gofile_cli/commands/: config.rs.html  download.rs.html  info.rs.html  upload.rs.html
trait.impl/argh/: trait.FromArgs.js  trait.SubCommand.js  trait.SubCommands.js  trait.TopLevelCommand.js
trait.impl/core/clone/: trait.Clone.js
trait.impl/core/convert/: trait.From.js
trait.impl/core/default/: trait.Default.js
trait.impl/core/error/: trait.Error.js
trait.impl/core/fmt/: trait.Debug.js  trait.Display.js
trait.impl/core/marker/: trait.Freeze.js  trait.Send.js  trait.Sync.js  trait.Unpin.js  trait.UnsafeUnpin.js
trait.impl/core/panic/unwind_safe/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
trait.impl/serde/de/: trait.Deserialize.js
trait.impl/serde_core/de/: trait.Deserialize.js
trait.impl/serde_core/ser/: trait.Serialize.js
trait.impl/tokio/io/async_read/: trait.AsyncRead.js
