[package]
name = "gofile-cli"
version = "0.0.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[[bin]]
name = "gofile"
path = "src/main.rs"
doc = false

[dependencies]
anyhow = "1.0.100"
base16ct = { version = "0.3.0", features = [ "alloc" ] }
clap = { version = "4.5.53", features = [ "derive" ] }
clap_complete = "4.5.64"
etcetera = "0.11.0"
gofile = { version = "0.0.0", path = "../gofile", default-features = false }
indicatif = "0.18.3"
md-5 = "0.10.6"
mime_guess = { version = "2.0.5", default-features = false }
opener = "0.8.3"
pin-project-lite = "0.2.16"
reqwest = { version = "0.12.25", default-features = false }
serde = { version = "1.0.228", features = ["derive"] }
shadow-rs = "1.5.0"
tokio = { version = "1.48.0", features = [ "rt-multi-thread", "fs" ] }
tokio-util = "0.7.17"
toml = "0.9.10"
url = "2.5.7"

[features]
default = [ "gofile/rustls-tls" ]
native-tls = [ "gofile/native-tls" ]
rustls-tls = [ "gofile/rustls-tls" ]

[build-dependencies]
shadow-rs = "1.5.0"
