[package]
name = "gofile-cli"
version = "0.0.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[[bin]]
name = "gofile"
path = "src/main.rs"
doc = false

[dependencies]
anyhow = "1.0.102"
base16ct = { version = "1.0.0", features = [ "alloc" ] }
clap = { version = "4.6.0", features = [ "derive" ] }
clap_complete = "4.6.0"
etcetera = "0.11.0"
gofile = { version = "0.0.0", path = "../gofile", default-features = false }
indicatif = "0.18.4"
md-5 = "0.10.6"
mime_guess = { version = "2.0.5", default-features = false }
opener = "0.8.4"
pin-project-lite = "0.2.17"
reqwest = { version = "0.13.2", default-features = false }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
shadow-rs = "1.7.1"
tokio = { version = "1.50.0", features = [ "rt-multi-thread", "fs" ] }
tokio-util = "0.7.18"
toml = "1.0.6"
url = "2.5.8"

[features]
default = [ "gofile/rustls" ]
native-tls = [ "gofile/native-tls" ]
rustls = [ "gofile/rustls" ]

[build-dependencies]
shadow-rs = "1.7.1"
